--- a/style.css
+++ b/style.css
@@ -58,17 +58,21 @@ header .background h1 {
   padding: 5px 7px 2px 5px;
   border-bottom: 3px solid #ff1c1c;
   background-color: rgba(0, 0, 0, 0.3);
-  -webkit-animation: main 1s;
-          animation: main 1s;
+  -webkit-animation: main 1.5s;
+          animation: main 1.5s;
 }
 
 @-webkit-keyframes main {
   0% {
-    -webkit-transform: translateY(200px);
-            transform: translateY(200px);
-    font-size: 80px;
+    opacity: 0;
+    background-color: none;
+    -webkit-transform: scale(0.1);
+            transform: scale(0.1);
+    -webkit-transform-origin: center;
+            transform-origin: center;
   }
   100% {
+    opacity: 1;
     -webkit-transform: none;
             transform: none;
   }
@@ -76,11 +80,15 @@ header .background h1 {
 
 @keyframes main {
   0% {
-    -webkit-transform: translateY(200px);
-            transform: translateY(200px);
-    font-size: 80px;
+    opacity: 0;
+    background-color: none;
+    -webkit-transform: scale(0.1);
+            transform: scale(0.1);
+    -webkit-transform-origin: center;
+            transform-origin: center;
   }
   100% {
+    opacity: 1;
     -webkit-transform: none;
             transform: none;
   }
@@ -97,20 +105,16 @@ header .background h2 {
   padding: 10px 15px;
   -webkit-box-shadow: 25px 20px 0px #133568;
           box-shadow: 25px 20px 0px #133568;
-  -webkit-animation: title 1.2s;
-          animation: title 1.2s;
+  -webkit-animation: title 3s;
+          animation: title 3s;
 }
 
 @-webkit-keyframes title {
   0% {
     -webkit-box-shadow: 0px 0px 0px #fff;
             box-shadow: 0px 0px 0px #fff;
-    -webkit-transform: translateX(-100%);
-            transform: translateX(-100%);
-  }
-  10% {
-    -webkit-box-shadow: 0px 0px 0px #fff;
-            box-shadow: 0px 0px 0px #fff;
+    -webkit-transform: translateX(-120%);
+            transform: translateX(-120%);
   }
   100% {
     -webkit-transform: none;
@@ -122,12 +126,8 @@ header .background h2 {
   0% {
     -webkit-box-shadow: 0px 0px 0px #fff;
             box-shadow: 0px 0px 0px #fff;
-    -webkit-transform: translateX(-100%);
-            transform: translateX(-100%);
-  }
-  10% {
-    -webkit-box-shadow: 0px 0px 0px #fff;
-            box-shadow: 0px 0px 0px #fff;
+    -webkit-transform: translateX(-120%);
+            transform: translateX(-120%);
   }
   100% {
     -webkit-transform: none;
@@ -252,28 +252,27 @@ header .background h2 {
 .container .block h2 {
   text-align: center;
   margin: 50px auto 0px;
-  font-size: 30px;
+  font-size: 35px;
+  font-weight: bold;
   color: #32b4ff;
   line-height: 2;
 }
 
 .container .block h2::before {
-  content: "/";
-  color: #ff1c1c;
+  content: "|";
+  color: orange;
   padding: 0 5px;
 }
 
 .container .block h2 span {
   font-style: italic;
-  font-weight: bold;
-  font-size: 35px;
 }
 
 .container .block .box {
   position: relative;
   width: 90%;
   min-height: 30vh;
-  margin: 10px auto 100px;
+  margin: 10px auto 60px;
   padding-top: 30px;
 }
 
@@ -377,5 +376,70 @@ header .background h2 {
   opacity: 1;
   -webkit-transform: none;
           transform: none;
+}
+
+.container .block .box h4 {
+  font-size: 16px;
+  padding: 20px 5px;
+  text-align: center;
+  line-height: 1.5;
+  background-color: #32b4ff;
+  margin-bottom: 10px;
+  color: #fff;
+  border-radius: 5px;
+  -webkit-animation: example 3s ease-in-out infinite;
+          animation: example 3s ease-in-out infinite;
+}
+
+@-webkit-keyframes example {
+  50% {
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
+  }
+  100% {
+    -webkit-transform: none;
+            transform: none;
+  }
+}
+
+@keyframes example {
+  50% {
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
+  }
+  100% {
+    -webkit-transform: none;
+            transform: none;
+  }
+}
+
+.container .block .box table {
+  width: 100%;
+}
+
+.container .block .box table tr {
+  display: block;
+  margin-bottom: 30px;
+}
+
+.container .block .box table th, .container .block .box table td {
+  display: block;
+  line-height: 1.5;
+  padding: 10px 5px;
+}
+
+.container .block .box table th {
+  background-color: #f0cccc;
+  font-weight: bold;
+}
+
+.container .block .box table td {
+  font-size: 14px;
+  font-family: serif;
+  border: 1px solid #9b9cf7;
+}
+
+.container .block .box table td span {
+  color: #ff1c1c;
 }
 /*# sourceMappingURL=style.css.map */
