--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ li {
 
 html, body {
   overflow-x: hidden;
+  font-family: serif;
 }
 
 header {
@@ -48,8 +49,8 @@ header .background {
 header .background h1 {
   position: absolute;
   left: 5%;
-  top: 10%;
-  font-size: 60px;
+  top: 35%;
+  font-size: 50px;
   color: #32b4ff;
   text-shadow: 2px 2px 0px #fff;
   font-style: italic;
@@ -57,7 +58,6 @@ header .background h1 {
   font-weight: bold;
   padding: 5px 7px 2px 5px;
   border-bottom: 3px solid #ff1c1c;
-  background-color: rgba(0, 0, 0, 0.3);
   -webkit-animation: main 1.5s;
           animation: main 1.5s;
 }
@@ -96,8 +96,8 @@ header .background h1 {
 
 header .background h2 {
   position: absolute;
-  left: 2%;
-  top: 70%;
+  left: 1%;
+  top: 55%;
   font-size: 25px;
   font-weight: bold;
   color: #fff;
@@ -133,6 +133,23 @@ header .background h2 {
     -webkit-transform: none;
             transform: none;
   }
+}
+
+header .background h3 {
+  position: absolute;
+  top: 5%;
+  font-size: 20px;
+  color: #ff1c1c;
+  padding: 2px;
+  font-weight: bold;
+  font-family: serif;
+}
+
+header .background h3 span {
+  font-size: 16px;
+  margin-left: 100px;
+  font-weight: normal;
+  color: #000;
 }
 
 #menuButton {
@@ -220,10 +237,9 @@ header .background h2 {
 }
 
 #slide h2 {
-  font-size: 40px;
+  font-size: 35px;
   margin: 100px 10px 0px;
   text-align: center;
-  font-style: italic;
   color: #fff;
   text-shadow: 1px 1px 5px #151788;
   padding: 2px;
@@ -252,7 +268,7 @@ header .background h2 {
 .container .block h2 {
   text-align: center;
   margin: 50px auto 0px;
-  font-size: 35px;
+  font-size: 30px;
   font-weight: bold;
   color: #32b4ff;
   line-height: 2;
@@ -261,11 +277,7 @@ header .background h2 {
 .container .block h2::before {
   content: "|";
   color: orange;
-  padding: 0 5px;
-}
-
-.container .block h2 span {
-  font-style: italic;
+  padding: 0 1px;
 }
 
 .container .block .box {
@@ -383,9 +395,9 @@ header .background h2 {
   padding: 20px 5px;
   text-align: center;
   line-height: 1.5;
-  background-color: #32b4ff;
+  background-color: #e7f6fa;
   margin-bottom: 10px;
-  color: #fff;
+  color: #333;
   border-radius: 5px;
   -webkit-animation: example 3s ease-in-out infinite;
           animation: example 3s ease-in-out infinite;
@@ -429,7 +441,7 @@ header .background h2 {
 }
 
 .container .block .box table th {
-  background-color: #f0cccc;
+  background-color: #ccf0f0;
   font-weight: bold;
 }
 
